# GraphOptiTest

./: .gitignore  GraphOptiTest.cabal  README.md
src/: Main.hs  MyPatriciaTree.hs
