name:                GraphOptiTest
version:             0.1.0.0
synopsis:            Test of replacement rules in fgl's PatriciaTree implementation
license:             Apache-2.0
license-file:        LICENSE
author:              Daniel Martin
maintainer:          fizbin@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10


executable GraphOptiTest
  main-is:             Main.hs
  other-modules:       MyPatriciaTree
  build-depends:       base >=4.8 && <4.9, fgl, containers
  ghc-prof-options: -fprof-auto
                    "-with-rtsopts=-p -s -h -i0.1"
  ghc-options: -Wall
               -O
               -rtsopts
  hs-source-dirs:      src
  default-language:    Haskell2010
  